

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lifeStory1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lifeStory2"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>

                <Switch
                    android:id="@+id/lifeStorySwitch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/familyTree1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/familyTree2"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>

                <Switch
                    android:id="@+id/familyTreeSwitch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spouse1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/spouse2"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>

                <Switch
                    android:id="@+id/spouseSwitch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/father1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/father2"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>

                <Switch
                    android:id="@+id/fatherSideSwitch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mother1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/textView131"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mother2"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>

                <Switch
                    android:id="@+id/motherSideSwitch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male2"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>

                <Switch
                    android:id="@+id/maleEventsSwitch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female2"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>

                <Switch
                    android:id="@+id/femaleEventsSwitch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TableRow
                android:id="@+id/logoutRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/logout1"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/logout2"
                        android:textSize="12sp"
                        android:typeface="sans" />

                </LinearLayout>


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        </TableLayout>
